--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -1,7 +1,17 @@
-version: '3.8'
+version: "3.2"
 services:
-  prom:
-    image: prom/prometheus:v2.19.0-rc.0 
+  prometheus:
+    image: prom/prometheus:v2.19.0-rc.0
+    container_name: prometheus
+    ports:
+    - 9090:9090
+    command:
+    - --config.file=/etc/prometheus/prometheus.yml
+    volumes:
+    - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
   enphase-exporter:
     image: prometheus-envoy:latest
-
+  grafana:
+    image: grafana/grafana
+    ports:
+    - 3000:3000
