--- a/example/prometheus.yml
+++ b/example/prometheus.yml
@@ -2,11 +2,11 @@ scrape_configs:
   - job_name: 'prometheus-custom-collector'
     static_configs:
       - targets:
-        - '192.168.1.40'
+        - '192.168.1.137'
     relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: prometheus-envoy:2112  # The prometheus-proxy's real hostname:port.
+        replacement: enphase-exporter:2112  # The prometheus-proxy's real hostname:port.
