--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -7,7 +7,11 @@ services:
     - 9090:9090
     command:
     - --config.file=/etc/prometheus/prometheus.yml
+    - --storage.tsdb.path=/data
+    - --storage.tsdb.wal-compression
+    - --storage.tsdb.retention.time=90d
     volumes:
+    - /data/prometheus-db:/data
     - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
     deploy:
       restart_policy:
